fixed some bugs -fixed the login page not displaying an error message for using an existing name for sign up -fixed the icons in the footer in home page being too big

--- a/styles.css
+++ b/styles.css
@@ -886,6 +886,6 @@ section .cards {
   }
   .social-icon a i {
     line-height: 40px;
-    font-size: 20px;
+    font-size: 15px;
   }
 }
